# CSNotes

./: .clang-format  .clangd  .gitignore  Bash_notes.md  CMakeLists.txt  README.md  gemm_block.cpp  gemm_row_col.cpp  notes.md
cpp/: Compile and link.md  cmake_notes.md  iterator.md
cuda/: laptop_setup.md  shared_mem.md  universal_benchmark.cpp
include/: gemm.cuh
include/CLI11/: LICENSE
include/Utils/: Timer.hpp
misc/: download_jhtdb.py  fetch_jhtdb_datasets.py  jhtdb_datastes.json  pressio_decompressio.md  wsl_ssh.md
singularity/: cuda_el9.def  cuda_rocky9.def
src/cuda/: gemm.cu
test/algorithms/: kd_tree.cpp
test/cuda/: CMakeLists.txt  gemm_bench.cu  get_device.cu  pi.cpp
test/network/: CMakeLists.txt  simple_tcp_server.cpp
test/posix/: CMakeLists.txt  basic_io.cpp  generate_test_data.cpp
test/std/: CMakeLists.txt  test_cpp23_fmt.cpp  test_cpp23_mdspan.cpp  test_cpp23_span.cpp
